refactoring with strict server
